# CuteModel-V2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  example.cc  run.py
cutemodel/: CuteModel.cpp  CuteModel.hpp
include/cutemodel/: cute_model.cc  cute_model.h
tflite/: CMakeLists.txt
